--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script defer src="./socket.io/socket.io.js"></script>
     <script defer src="script.js"></script>
   </head>
   <body>
