--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#8400ff" />
     <meta name="shortcut icon" content="res/icon_128.png" />
-    <title>now.</title>
+    <title>TECHチャット</title>
     <link rel="apple-touch-icon" href="res/icon_512.png" />
     <meta name="apple-mobile-web-app-status-bar" content="rgb(89, 255, 193)" />
     <link rel="manifest" href="manifest.json" />
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav>
-      <h1>now.</h1>
+      <h1>TECHチャット</h1>
     </nav>
     <div id="room-container">
       <p class="text">
