--- a/views/room.ejs
+++ b/views/room.ejs
@@ -8,7 +8,7 @@
     <script>
       const roomName = "<%= roomName %>";
     </script>
-    <title>now on <%= roomName %></title>
+    <title>TECHチャットの <%= roomName %></title>
     <link rel="apple-touch-icon" href="res/icon_512.png" />
     <meta name="apple-mobile-web-app-status-bar" content="rgb(89, 255, 193)" />
     <link rel="manifest" href="manifest.json" />
