--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,13 +26,13 @@
         <a class="btn" href="#new-room-modal" style="float: right"
           ><span class="material-icons">add_circle_outline</span></a
         >
-        <span style="float: left">Available Rooms:</span>
+        <span style="float: left">参加できるルーム:</span>
       </p>
       <% Object.keys(rooms).forEach(room => { %>
       <div class="room-item">
         <p class="room-label"><%= room %></p>
         <a class="btn" href="/<%= room %> "
-          >Join <span class="material-icons">chevron_right</span></a
+          >参加する <span class="material-icons">chevron_right</span></a
         >
       </div>
       <% }); %>
@@ -53,7 +53,7 @@
           </form>
         </div>
       </div>
-      <a href="about.html" class="btn" style="float: right">About</a>
+<!--       <a href="about.html" class="btn" style="float: right">About</a> -->
     </div>
   </body>
 </html>
