--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#8400ff" />
+    <meta name="theme-color" content="#131313" />
     <script>
       const roomName = "<%= roomName %>";
     </script>
     <title>TECHチャットの <%= roomName %></title>
-    <meta name="apple-mobile-web-app-status-bar" content="rgb(89, 255, 193)" />
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
