--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -9,7 +9,7 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.2rem;
   background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
     linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
@@ -37,79 +37,6 @@ a {
   line-height: 30px;
 }
 
-.modal-overlay {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(20px);
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1010;
-  visibility: hidden;
-  opacity: 1;
-  pointer-events: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  height: 0;
-}
-.modal-overlay:target {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: auto;
-  height: 100%;
-}
-.modal-overlay > .modal {
-  width: 500px;
-  max-width: 90%;
-  height: auto;
-  max-height: 60%;
-  overflow-y: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  padding: 1rem;
-  background: rgb(105, 105, 105);
-  color: white;
-  border-radius: 5px;
-}
-
-.modal-overlay h1 {
-  font-size: 2rem;
-  margin: auto auto 1rem 1rem;
-}
-
-.modal p,
-.modal .text {
-  margin: auto;
-}
-
-.modal-close {
-  color: #aaa;
-  font-size: 2rem;
-  position: fixed;
-  right: 0;
-  text-align: center;
-  top: 1rem;
-  margin-right: 1rem;
-  text-decoration: none;
-  cursor: pointer;
-}
-.modal-close:hover {
-  color: black;
-  text-decoration: none;
-}
-
-.plus-icon {
-  border-radius: 50px;
-  width: 20px;
-  height: 20px;
-  padding: 0;
-  margin: zero;
-}
-
 a {
   color: rgb(167, 255, 233);
   text-decoration: underline transparent;
@@ -125,7 +52,7 @@ nav {
   position: absolute;
   background-color: rgb(89, 255, 193);
   color: rgb(37, 37, 37);
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   top: 0;
   left: 0;
   right: 0;
@@ -243,7 +170,7 @@ nav h1 {
   border-radius: 5px;
   border: 0;
   font-size: 1.2rem;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
 }
 
