--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,6 @@
     <meta name="theme-color" content="#131313" />
     <title>TECHチャット</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
     <script defer src="./socket.io/socket.io.js"></script>
     <script defer src="script.js"></script>
   </head>
@@ -18,39 +14,11 @@
       <h1>TECHチャット</h1>
     </nav>
     <div id="room-container">
-      <p class="text">
-        <a class="btn" href="#new-room-modal" style="float: right">
-          <span class="material-icons">add_circle_outline</span>
-        </a>
-        <span style="float: left">参加できるルーム:</span>
-      </p>
-      <% Object.keys(rooms).forEach(room => { %>
-      <div class="room-item">
-        <p class="room-label"><%= room %></p>
-        <a class="btn" href="/<%= room %> ">
-          参加する
-          <span class="material-icons">chevron_right</span>
-        </a>
-      </div>
-      <% }); %>
-      <div class="modal-overlay" id="new-room-modal">
-        <div class="modal">
-          <a href="javascript.void(0)" class="modal-close">&times;</a>
-          <p class="room-label">Create a new room:</p>
-          <form action="/room" method="POST">
-            <input
-              type="text"
-              name="room"
-              id="input-create-room"
-              placeholder="Enter room name"
-              autocomplete="off"
-              autofocus
-              required
-            />
-            <button class="btn" type="submit">Create</button>
-          </form>
-        </div>
-      </div>
+      <form action="/user" method="post">
+        <input type="text" name="username" placeholder="名前を入力してください" autocomplete="off" autofocus
+          required />
+        <button class="btn" type="submit">ログイン</button>
+      </form>
     </div>
   </body>
 </html>
