--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#131313" />
     <script>
-      const roomName = "<%= roomName %>";
+      const username = "<%= username %>";
     </script>
-    <title>TECHチャットの <%= roomName %></title>
+    <title>TECHチャットの部屋</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -17,6 +17,7 @@
     <script defer src="script.js"></script>
   </head>
   <body>
+    <button id="logout">ログアウト</button>
     <div id="message-container"></div>
     <form id="send-container">
       <input type="text" id="message-input" autocomplete="off" />
