--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,8 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
+    'Hiragino Sans', Meiryo, sans-serif;
   font-size: 1.2rem;
   background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
     linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
@@ -61,12 +62,6 @@ nav {
   display: flex;
   align-items: baseline;
   justify-content: center;
-}
-
-nav h1 {
-  font-size: 65px;
-  margin: 0 0 20px;
-  padding: 0;
 }
 
 #message-container {
