--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#131313" />
-    <title>TECHチャット</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="./socket.io/socket.io.js"></script>
-    <script defer src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <h1>TECHチャット</h1>
-    </nav>
-    <div id="room-container">
-      <form action="/user" method="post">
-        <input type="text" name="username" placeholder="名前を入力してください" autocomplete="off" autofocus
-          required />
-        <button class="btn" type="submit">ログイン</button>
-      </form>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#131313" />
+  <title>TECHチャット</title>
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+  <script defer src="./socket.io/socket.io.js"></script>
+  <script defer src="script.js"></script>
+</head>
+
+<body>
+  <nav class="flex justify-center items-center bg-green-300">
+    <h1 class="text-5xl">TECHチャット</h1>
+  </nav>
+  <main class="flex justify-center" id="room-container">
+    <form action="/user" method="post">
+      <input class="h-10 mt-20 text-gray-900 text-center" name="username" type="text" placeholder="ユーザー名"
+        autocomplete="off" autofocus required />
+      <button type="sumbit" class="block w-full py-2 mt-10 font-semibold bg-pink-600 rounded">
+        ログイン
+      </button>
+    </form>
+  </main>
+</body>
+
 </html>
