Place logout button on right side

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
   <main class="flex justify-center" id="room-container">
     <form action="/user" method="post">
       <input class="h-10 mt-20 text-gray-900 text-center" name="username" type="text" placeholder="ユーザー名"
-        autocomplete="off" autofocus required />
+        autocomplete="off" required />
       <button type="sumbit" class="block w-full py-2 mt-10 font-semibold bg-pink-600 rounded">
         ログイン
       </button>
