--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-  <nav class="flex justify-center items-center bg-green-300">
+  <nav class="flex justify-center items-center h-20 bg-green-300">
     <h1 class="text-5xl">TECHチャット</h1>
   </nav>
-  <main class="flex justify-center" id="room-container">
+  <main class="flex justify-center w-full mt-20" id="room-container">
     <form action="/user" method="post">
-      <input class="h-10 mt-20 text-gray-900 text-center" name="username" type="text" placeholder="ユーザー名"
-        autocomplete="off" required />
-      <button type="sumbit" class="block w-full py-2 mt-10 font-semibold bg-pink-600 rounded">
+      <input class="h-10 text-gray-900 text-center" name="username" type="text" placeholder="ユーザー名" autocomplete="off"
+        required />
+      <button type="sumbit" class="block w-full py-2 mt-10 font-semibold bg-rose-600 rounded">
         ログイン
       </button>
     </form>
