--- a/views/room.ejs
+++ b/views/room.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class='flex flex-col items-center h-screen min-h-screen"'>
+  <div class='flex flex-col items-center gap-6 h-screen min-h-screen"'>
     <div class='flex-none flex justify-end w-10/12'>
       <button
         class="mt-4 py-2 px-4 text-gray-700 font-bold bg-rose-600 rounded opacity-80 transition hover:text-gray-800 hover:opacity-100"
@@ -25,9 +25,11 @@
         ログアウト
       </button>
     </div>
-    <div class='flex-1 flex flex-col w-10/12 overflow-y-auto'>
-      <main class="flex-1 overflow-y-auto" id="message-container"></main>
-
+    <div class="flex flex-col flex-1 w-10/12 overflow-y-auto" id="container-wrapper">
+      <div class='flex-1'>
+        <main class='grid grid-cols-1' id="message-container">
+        </main>
+      </div>
       <div class='flex-none flex justify-center mb-3'>
         <form class="flex max-w-5xl text-xl" id="send-container">
           <input
