Change single quotes to double quotes in HTML

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <div class='flex flex-col items-center gap-6 h-screen min-h-screen"'>
-    <div class='flex-none flex justify-end w-10/12'>
+  <div class="flex flex-col items-center gap-6 h-screen min-h-screen">
+    <div class="flex-none flex justify-end w-10/12">
       <button
         class="mt-4 py-2 px-4 text-gray-700 font-bold bg-rose-600 rounded opacity-80 transition hover:text-gray-800 hover:opacity-100"
         id="logout">
@@ -26,11 +26,11 @@
       </button>
     </div>
     <div class="flex flex-col flex-1 w-10/12 overflow-y-auto" id="container-wrapper">
-      <div class='flex-1'>
-        <main class='grid grid-cols-1' id="message-container">
+      <div class="flex-1">
+        <main class="grid grid-cols-1" id="message-container">
         </main>
       </div>
-      <div class='flex-none flex justify-center mb-3'>
+      <div class="flex-none flex justify-center mb-3">
         <form class="flex max-w-5xl text-xl" id="send-container">
           <input
             class="h-12 w-full px-7 text-white bg-gray-600 border-gray-700 border-2 border-r-0 outline-none transition"
